# victauri

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  PLAN.md  README.md  RELEASING.md  SECURITY.md  clippy.toml  deny.toml  test_live.sh
.cargo/: audit.toml
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/linux-deps/: action.yml
.github/actions/victauri-test/: action.yml
.github/workflows/: ci.yml  compat.yml  docs.yml  e2e.yml  release-npm.yml  release-vscode.yml  release.yml  surface-audit.yml
.verax/: gate.json
crates/victauri-browser/: Cargo.toml  README.md
crates/victauri-browser/src/: auth.rs  bridge_dispatch.rs  discovery.rs  installer.rs  lib.rs  main.rs  mcp_handler.rs  mcp_server.rs  native_messaging.rs  server.rs  tab_state.rs
crates/victauri-browser/tests/: deep_adversarial_tests.rs  e2e_pipeline.rs
crates/victauri-cli/: Cargo.toml  README.md
crates/victauri-cli/src/: bridge.rs  main.rs
crates/victauri-cli/tests/: bridge_e2e.rs
crates/victauri-core/: Cargo.toml  README.md
crates/victauri-core/benches/: core_benchmarks.rs
crates/victauri-core/src/: codegen.rs  error.rs  event.rs  lib.rs  middleware.rs  recording.rs  registry.rs  security.rs  snapshot.rs  types.rs  verification.rs
crates/victauri-core/tests/: codegen_compile_test.rs  core_tests.rs  deep_adversarial_tests.rs
crates/victauri-macros/: Cargo.toml  README.md
crates/victauri-macros/src/: lib.rs
crates/victauri-macros/tests/: macro_tests.rs
crates/victauri-plugin/: Cargo.toml  README.md  build.rs
crates/victauri-plugin/permissions/: default.toml
crates/victauri-plugin/permissions/autogenerated/: reference.md
crates/victauri-plugin/permissions/autogenerated/commands/: victauri_check_ipc_integrity.toml  victauri_detect_ghost_commands.toml  victauri_dom_snapshot.toml  victauri_eval_callback.toml  victauri_eval_js.toml  victauri_get_ipc_log.toml  victauri_get_memory_stats.toml  victauri_get_registry.toml  victauri_get_window_state.toml  victauri_list_windows.toml  victauri_verify_state.toml
crates/victauri-plugin/permissions/schemas/: schema.json
crates/victauri-plugin/src/: auth.rs  bridge.rs  database.rs  error.rs  filmstrip.rs  introspection.rs  js_bridge.rs  lib.rs  mcp.rs  memory.rs  privacy.rs  redaction.rs  screencast.rs  screenshot.rs  tools.rs
crates/victauri-plugin/src/mcp/: authz.rs  backend_params.rs  compound_params.rs  helpers.rs  introspection_params.rs  mod.rs  other_params.rs  recording_params.rs  rest.rs  server.rs  verification_params.rs  webview_params.rs  window_params.rs
crates/victauri-plugin/tests/: adversarial_tests.rs  bridge_tests.rs  deep_adversarial_tests.rs  integration_tests.rs  platform_tests.rs  stress_tests.rs  tool_contract_tests.rs
crates/victauri-plugin/tests/bridge_tests/: package-lock.json  package.json  run_tests.js
crates/victauri-plugin/tests/common/: mod.rs
crates/victauri-test/: Cargo.toml  README.md
crates/victauri-test/src/: app.rs  assertions.rs  client.rs  coverage.rs  discovery.rs  error.rs  lib.rs  locator.rs  prelude.rs  reporting.rs  smoke.rs  visual.rs
crates/victauri-test/tests/: client_tests.rs  concurrent_stress_test.rs  e2e_demo_app.rs  high_level_api.rs  soak_test.rs  verify_builder.rs
crates/victauri-watchdog/: Cargo.toml  README.md
crates/victauri-watchdog/src/: main.rs
docs/: book.toml  compatibility.md  testing-tauri-apps.md
docs/src/: SUMMARY.md  architecture.md  chrome-extension.md  compatibility.md  configuration.md  faq.md  getting-started.md  introduction.md  security.md  testing-tauri-apps.md  testing.md  tools-reference.md
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
editors/vscode/src/: client.ts  extension.ts  screenshotPanel.ts
examples/: agent-session.md
examples/demo-app/: .mcp.json  Cargo.toml  README.md  build.rs  tauri.conf.json  test_deep.sh
examples/demo-app/capabilities/: default.json
examples/demo-app/frontend/: index.html
examples/demo-app/src/: main.rs
examples/demo-app/tests/: adversarial.rs  integration.rs
examples/gauntlet-app/: Cargo.toml  build.rs  tauri.conf.json
examples/gauntlet-app/capabilities/: default.json
examples/gauntlet-app/frontend/: app.js  blind.html  index.html  secondary.html  secondary.js
examples/gauntlet-app/src/: main.rs
examples/gauntlet-app/tests/: gauntlet.rs
extensions/chrome/: content-isolated.js  content-main.js  manifest.json  mcp-config-example.json  service-worker.js
extensions/chrome/_locales/en/: messages.json
extensions/chrome/popup/: popup.css  popup.html  popup.js
extensions/chrome/tests/: content-isolated.test.js  css-inspect.test.js  dom-snapshot.test.js  eval.test.js  find-elements.test.js  helpers.test.js  interactions.test.js  logs.test.js  package-lock.json  package.json  performance.test.js  provenance.test.js  recording.test.js  service-worker.test.js  setup.js  storage.test.js  vitest.config.js  waitfor.test.js
extensions/chrome/tests/e2e/: a4-channel-forgery.mjs
extensions/firefox/: content-isolated.js  content-main.js  manifest.json
extensions/firefox/popup/: popup.html
extensions/npm/: README.md  package.json
extensions/npm/scripts/: pin.js  postinstall.js
scripts/: bump-version.ps1  bump-version.sh  check-doc-counts.sh  preflight.ps1  preflight.sh
scripts/agent-eval/: RESULTS.md  tasks.md
scripts/agent-eval/capability-proofs/: CAPABILITIES.md  MACOS-WEDGE.md
scripts/compat/: README.md  apps.json  retest-all.sh  retest-app.sh  smoke.sh
scripts/deep-test/: README.md  macos-deep-test.sh  macos-tcc-check.sh
scripts/e2e/: README.md
tools/: install-gate.sh
