[workspace]
resolver = "2"
members = [
    "crates/victauri-plugin",
    "crates/victauri-macros",
    "crates/victauri-core",
    "crates/victauri-test",
    "crates/victauri-watchdog",
    "examples/demo-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/runyourempire/victauri"
description = "Verified Introspection & Control for Tauri Applications"
authors = ["4DA Systems <hello@4da.ai>"]
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_closure_for_method_calls = "deny"

[workspace.dependencies]
victauri-core = { version = "0.1.0", path = "crates/victauri-core" }
victauri-macros = { version = "0.1.0", path = "crates/victauri-macros" }
victauri-plugin = { version = "0.1.0", path = "crates/victauri-plugin" }
victauri-test = { version = "0.1.0", path = "crates/victauri-test" }

# Tauri
tauri = { version = "2", default-features = false }

# MCP / Server
rmcp = { version = "1.5", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proc macros
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Utilities
schemars = { version = "1", features = ["chrono04"] }
tauri-build = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
