[package]
name = "victauri-browser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native messaging host for Victauri Browser extension — MCP inspection for any website"
authors.workspace = true
rust-version.workspace = true
keywords = ["browser", "mcp", "chrome", "extension", "inspection"]
categories = ["development-tools::testing", "web-programming"]

[[bin]]
name = "victauri-browser-host"
path = "src/main.rs"

[dependencies]
victauri-core = { path = "../victauri-core" }
axum = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
