[package]
name = "victauri-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native messaging host for Victauri Browser extension — MCP inspection for any website"
authors.workspace = true
rust-version.workspace = true
keywords = ["browser", "mcp", "chrome", "extension", "inspection"]
categories = ["development-tools::testing", "web-programming"]
homepage = "https://github.com/runyourempire/victauri"
documentation = "https://docs.rs/victauri-browser"
readme = "README.md"
exclude = ["tests/"]

[lib]
name = "victauri_browser"
path = "src/lib.rs"

[[bin]]
name = "victauri-browser-host"
path = "src/main.rs"

[dependencies]
victauri-core = { workspace = true, features = ["middleware"] }
axum = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_WindowsProgramming"] }

[lints]
workspace = true
