[package]
name = "victauri-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Victauri — scaffold tests, check running apps, record sessions"
authors.workspace = true
rust-version.workspace = true
keywords = ["tauri", "mcp", "testing", "cli", "scaffold"]
categories = ["development-tools::testing", "command-line-utilities"]
homepage = "https://github.com/runyourempire/victauri"
documentation = "https://docs.rs/victauri-cli"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "victauri"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
victauri-test = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
