[package]
name = "victauri-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and protocol for Victauri — Verified Introspection & Control for Tauri"
authors.workspace = true
rust-version.workspace = true
keywords = ["tauri", "mcp", "introspection", "testing", "desktop"]
categories = ["development-tools::testing", "gui"]
homepage = "https://github.com/runyourempire/victauri"
documentation = "https://docs.rs/victauri-core"
readme = "../../README.md"
exclude = ["tests/", "benches/"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false
