[package]
name = "victauri-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for Victauri — auto-instrumentation of Tauri commands"
authors.workspace = true
rust-version.workspace = true
keywords = ["tauri", "mcp", "proc-macro", "introspection", "instrumentation"]
categories = ["development-tools::testing", "development-tools::procedural-macro-helpers"]
homepage = "https://github.com/runyourempire/victauri"
documentation = "https://docs.rs/victauri-macros"
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
victauri-core = { workspace = true }
victauri-macros = { path = "." }
