[package]
name = "victauri-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri plugin for Victauri — embedded MCP server with full-stack introspection"
authors.workspace = true
rust-version.workspace = true

[dependencies]
victauri-core = { workspace = true }
victauri-macros = { workspace = true }
tauri = { workspace = true, features = ["wry"] }
rmcp = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
    "Win32_Foundation",
] }
