[package]
name = "victauri-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri plugin for Victauri — embedded MCP server with full-stack introspection"
authors.workspace = true
rust-version.workspace = true
links = "tauri-plugin-victauri"
keywords = ["tauri", "mcp", "plugin", "testing", "ai-agent"]
categories = ["development-tools::testing", "gui"]

[dependencies]
victauri-core = { workspace = true }
victauri-macros = { workspace = true }
tauri = { workspace = true, features = ["wry"] }
rmcp = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
raw-window-handle = "0.6"
base64 = "0.22"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Xps",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
