[package]
name = "victauri-watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight crash-recovery sidecar for Victauri MCP server"
authors.workspace = true
rust-version.workspace = true
keywords = ["tauri", "mcp", "watchdog", "health-check", "monitoring"]
categories = ["development-tools::testing"]
homepage = "https://github.com/runyourempire/victauri"
documentation = "https://docs.rs/victauri-watchdog"
readme = "../../README.md"

[[bin]]
name = "victauri-watchdog"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
